# sense-hat-matrix

./: .gitignore  README.md  setup.cfg  setup.py
src/sense_hat_matrix/: Graph.py  GraphUtil.py  LedMatrix.py  LedMatrixUtil.py  app.py
src/test/: DoesItWork.py  PrettyPrint.py  TestGraph.py  TestGraphUtil.py  TestLedMatrixUtil.py
