[metadata]
name = sense-hat-matrix
description = Manipulate the LED matrix of the sense-hat
long_description_content_type = text/markdown
url = https://github.com/szigyi/sense-hat-matrix
project_urls =
    Bug Tracker = https://github.com/szigyi/sense-hat-matrix/issues
    Changelog = https://github.com/szigyi/sense-hat-matrix/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sense_hat_matrix = sense_hat_matrix.app:entry_point
